# smf_tools

./: .gitignore  .travis.yml  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Doxyfile  FeatureCreator.cpp  FeatureCreator.h  FileHandler.cpp  GNUmakefile  HpiHandler.cpp  HpiHandler.h  MapConv.cpp  MapConv.sln  MapConv.vcproj  README.md  README.txt  TileHandler.cpp  TileHandler.h  Vagrantfile  bootstrap.sh  cmdhomo.ods  filefunctions.h  float3.cpp  float3.h  notes.txt  oiio.patch  stdafx.h  texcompress.cpp  texcompress_nogui.cpp
ctest/: CMakeLists.txt
data/: makedw2.bat  makelotr4.bat  makeschizo4.bat
data/samples/2/: Makefile  tiny.smd
diary/: 2023-10-24.md  2023-11-03.md  2023-11-10.md  2023-11-17.md  2023-11-19.md  2023-11-20.md  2023-11-21.md  2023-11-23.md  2023-11-24.md  Article.md  Header_Dependencies.canvas  Load Map.canvas  Map Data Format.md  TODO.md  TileCache.md  TileMap.md  TiledImage.md  cmdhomo.ods  smt_convert.md
doc/: README-texcompress_nogui.txt  README.txt  docstrings.cmake
ext/elog/: elog.h  logger.h  stream_logger.h
ext/recoil/: SMFFormat.h
ext/tclap/: Arg.h  ArgBase.h  ArgContainer.h  ArgException.h  ArgGroup.h  ArgSwitch.h  ArgSwitchMulti.h  ArgTraits.h  ArgUnlabeledValues.h  ArgValue.h  ArgValueMulti.h  CMakeLists.txt  CmdLine.h  CmdLineBase.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  ConstraintBase.h  ConstraintValues.h  ContainerBase.h  DeferDelete.h  DocBookOutput.h  Exception.h  GroupBase.h  Groups.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  OutputBase.h  Output_fmt.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  (+3 more)
ext/tclap/test/: CMakeLists.txt  tclap-testing.cpp  tclap_01.cpp  tclap_02.cpp
gtest/: CMakeLists.txt  channel_test.cpp  squish.cpp  test.cpp
include/IL/.svn/: all-wcprops  entries
samples/: readme.txt
samples/1/: Makefile  fs.txt  test.smd
samples/2/: Makefile  fs.txt
src/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  FeatureCreator.cpp  FileHandler.cpp  FileHandler.h  GNUmakefile  MapConv.cpp  TileHandler.cpp  TileHandler.h  args.h  args_oiio.h  bitmap.cpp  bitmap.h  config.h  config.h.in  dxt1load.cpp  dxt1load.h  emapconv.cpp  emapconv2.cpp  emapconv_args.h  featurecreator.cpp  featurecreator.h  filefunctions.h  filehandler.cpp  filemap.cpp  filemap.h  main.cpp  makemap.sh  mapconv.cpp  mapfile.h  nvtt_output_handler.cpp  nvtt_output_handler.h  option_args.h  smf.cpp  smf.h  smf_cc.cpp  smf_decc.cpp  smf_info.cpp  smf_tools.h.in  (+30 more)
src/elog/: logger.h
src/smflib/: CMakeLists.txt  basicio.cpp  basicio.h  filemap.cpp  filemap.h  nullio.cpp  nullio.h  oiio.cpp  oiio.h  smf.cpp  smf.h  smf_old.cpp  smfiobase.h  smt.cpp  smt.h  tilecache.cpp  tilecache.h  tiledimage.cpp  tiledimage.h  tilemap.cpp  tilemap.h  util.cpp  util.h  util_oiio.cpp  util_oiio.h
src/squish/: Makefile  alpha.cpp  cmake_install.cmake  squish.cpp
src/tests/: run.sh
src/tests/smf_create_minimal/: test.sh
test/: clean.sh  log.txt  run.sh
test/ctest/: CMakeLists.txt  emapconv.cmake  mapconv.cmake  smf_cc.cmake  smf_decc.cmake  smf_info.cmake  smt_convert.cmake  smt_info.cmake  smt_repair.cmake
test/data/: data.smt  height.tif
test/gtest/: CMakeLists.txt  main.cpp  squish.cpp  t_filemap.cpp  t_smf.cpp  t_smt.cpp  t_squish.cpp  t_tilecache.cpp  t_tiledimage.cpp  t_tilemap.cpp  t_util.cpp  test.cpp  tilecache.cpp  tilemap.cpp
test/img-scale_1024x-split_32x-smt/: test.sh
test/img-smt/: test.sh
test/img_1024x-smt/: test.sh
test/makemap_permutations/: test.sh
test/mixed-collate-scale_2048x-smt/: test.sh
test/smf-extract/: test.sh
test/smf-info/: test.sh
test/smt-collate-img/: test.sh
test/smt-collate-scale_1024x-img/: .test.sh.swo  test.sh
test/smt-collate-scale_1024x-split_128x-img/: test.sh
test/smt-reconstruct_smf-scale_1024x512-split_128x-img/: test.sh
test/smt-reconstruct_smf-scale_16384x-img/: test.sh
test/smt-reconstruct_smf-scale_512x-img/: test.sh
test/smt-reconstruct_smf-scale_512x1024-split_128x-img/: test.sh
test/smt-reconstruct_smf-split_128x-img/: test.sh
test/smt-smt/: test.sh
test/smt_convert-permutations/: test.sh
test/tiles-smt/: test.sh
tests/: clean.sh  run.sh  suppressions.supp
tests/data/: data.smf  tilemap.csv
tests/smf_cc_create_minimal/: test.sh
tests/smf_create/: test.sh
tests/smf_extract/: test.sh
tests/smf_info/: test.sh
tests/smt_cc_collate_from_multiple/: test.sh
tests/smt_cc_create_from_multiple/: test.sh
tests/smt_cc_create_from_single/: test.sh
tests/smt_create_from_single/: test.sh
tests/smt_create_multiple_sources/: test.sh
tests/smt_create_split_1024x/: test.sh
tests/smt_create_split_image/: test.sh
tests/smt_decc_extract_collate/: test.sh
tests/smt_decc_extract_tiles/: test.sh
tests/smt_decc_extract_with_tilemap/: test.sh
tests/smt_extract_collate/: test.sh
tests/smt_extract_collate_scale/: test.sh
tests/smt_extract_collate_scale_split/: test.sh
tests/smt_extract_collate_split/: test.sh
tests/smt_extract_reconstruct/: test.sh
tests/smt_extract_reconstruct_csv/: test.sh
tests/smt_extract_reconstruct_scale/: test.sh
tests/smt_extract_reconstruct_scale_split/: test.sh
tests/smt_extract_reconstruct_split/: test.sh
tests/smt_extract_tiles/: test.sh
tests/smt_huge/: test.sh
tests/smt_info/: test.sh
tests/smt_landscape/: test.sh
tests/smt_overlap/: test.sh
tests/smt_portrait/: test.sh
tests/template/: test.sh
